<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Register">

    <TextView
        android:id="@+id/register"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:gravity="center"
        android:background="@drawable/text_view_design"/>

    <EditText
        android:id="@+id/UserName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/edit_text_design"
        android:drawableStart="@drawable/user_icon"
        android:hint="@string/Uname"
        android:inputType="text"
        android:padding="10dp"
        android:textColorHint="@color/black"
        android:layout_below="@id/register"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/Email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/edit_text_design"
        android:drawableStart="@drawable/email_icon"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColorHint="@color/black"
        android:layout_below="@id/UserName"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/edit_text_design"
        android:drawableStart="@drawable/password_icon"
        android:hint="@string/psword"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColorHint="@color/black"
        android:layout_below="@id/Email"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/registerbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registerbtn"
        android:layout_below="@id/Password"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/blue"/>

    <TextView
        android:id="@+id/toLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toLogin"
        android:textColor="#FFC107"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/registerbtn"
        android:textSize="20sp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/toLogin"
        android:layout_marginTop="50dp"/>
</RelativeLayout>